--- a/365/index.html
+++ b/365/index.html
@@ -86,8 +86,10 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
         </div>
       </section>
 
-      <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-      <a href="https://logwork.com/countdown-timer/" class="countdown-timer" data-style="circles" data-timezone="Europe/Dublin" data-textcolor="#6b6b6b" data-date="2021-05-01 12:00" data-background="#ff9100" data-unitscolor="#636363">365 Challenge Starts in:</a>
+
+      <h1 class="title has-text-centered" style="margin-top: 40px;">
+        It's May! So check out <a href="months/may21.html">the current progress here!</a>
+      </h1>
       
 
 
