--- a/365/months/oct21.html
+++ b/365/months/oct21.html
@@ -27,7 +27,7 @@
           <nav class="navbar">
             <div class="container">
               <div class="navbar-brand">
-                <a class="navbar-item">
+                <a class="navbar-item" href="../../index.html">
                   <h1 class="title">Ryan Veitch</h1>
                 </a>
               </div>
