--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
           <nav class="navbar">
             <div class="container">
               <div class="navbar-brand">
-                <a class="navbar-item">
+                <a class="navbar-item" href="./index.html">
                   <h1 class="title">Ryan Veitch</h1>
                 </a>
               </div>
