--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
             <div class="message-body">
               <h1 class="title">365 Project</h1>
                 I'm taking a single photo every day for a full year. 365 days photography challenge. Using iPhone 12 Pro Max, Sony A7II, or DJI Mini 2. 
-                See my progress on <a href="https://www.instagram.com/a_year_of_veitch/">instagram here</a>, or check out the <a href="365/index.html">project page here</a>
+                See my progress on <a href="https://www.instagram.com/a_year_of_veitch/">instagram here</a>, or check out the <a href="365/months/may21.html">project page here</a>
             </div>
           </article>
       
