--- a/365/kit/kit.html
+++ b/365/kit/kit.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-secondary is-small">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
