--- a/365/index.html
+++ b/365/index.html
@@ -24,7 +24,8 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 
 <script src="js/script.js"></script> 
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+ <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+ <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
 
     <title>365 Photo Challenge</title>
 
@@ -32,7 +33,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 
   <body>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-secondary is-small">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
