--- a/365/months/apr22.html
+++ b/365/months/apr22.html
@@ -19,7 +19,8 @@
       
       <script src="../js/script.js"></script>  
         
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+ <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+ <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
 
     <title>365 Photo Challenge</title>
 
@@ -27,7 +28,7 @@
 
   <body>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-secondary is-small">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
