--- a/365/months/feb22.html
+++ b/365/months/feb22.html
@@ -19,7 +19,8 @@
       
       <script src="../js/script.js"></script> 
         
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+ <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+ <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
 
     <title>365 Photo Challenge</title>
 
@@ -27,7 +28,7 @@
 
   <body>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-secondary is-small">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
@@ -78,9 +79,9 @@
                 <li><a href="./nov21.html">November '21</a></li>
                 <li><a href="./dec21.html">December '21</a></li>
                 <li><a href="./jan22.html">January '22</a></li>
-                <li><a href="./feb22.html">February'22</a></li>
+                <li class="is-active"><a href="./feb22.html">February'22</a></li>
                 <li><a href="./mar22.html">March'22</a></li>
-                <li class="is-active"><a href="./apr22.html">April'22</a></li>
+                <li><a href="./apr22.html">April'22</a></li>
                 <li><a href="./may22.html">May'22</a></li>
               </ul>
             </div>
