--- a/365/months/jun21.html
+++ b/365/months/jun21.html
@@ -19,7 +19,8 @@
       
       <script src="../js/script.js"></script> 
         
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+ <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+ <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
 
     <title>365 Photo Challenge</title>
 
@@ -27,7 +28,7 @@
 
   <body>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-secondary is-small">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
@@ -70,7 +71,7 @@
               <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./may21.html">May '21</a></li>
-                <li><a href="./jun21.html">June '21</a></li>
+                <li class="is-active"><a href="./jun21.html">June '21</a></li>
                 <li><a href="./jul21.html">July '21</a></li>
                 <li><a href="./aug21.html">August '21</a></li>
                 <li><a href="./sep21.html">September '21</a></li>
@@ -80,7 +81,7 @@
                 <li><a href="./jan22.html">January '22</a></li>
                 <li><a href="./feb22.html">February'22</a></li>
                 <li><a href="./mar22.html">March'22</a></li>
-                <li class="is-active"><a href="./apr22.html">April'22</a></li>
+                <li><a href="./apr22.html">April'22</a></li>
                 <li><a href="./may22.html">May'22</a></li>
               </ul>
             </div>
