--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 
 <script src="js/script.js"></script> 
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+ <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
+ <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
 
     <title>Ryan Veitch - Homepage</title>
 
@@ -51,7 +52,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
         </div>
     </section>
 
-        <article class="message is-primary" style="margin-top: 50px;">
+        <article class="message is-secondary" style="margin-top: 50px;">
             <div class="message-body">
               <h1 class="title">365 Project</h1>
                 I'm taking a single photo every day for a full year. 365 days photography challenge. Using iPhone 12 Pro Max, Sony A7II, or DJI Mini 2. 
