--- a/365/months/may21.html
+++ b/365/months/may21.html
@@ -570,7 +570,7 @@
            -->
 
            <h1 class="title is-4">June '21</h1>
-           <p>June 2021 -> <a href='jun21.html'>here</a></p>
+           <p class="title is-5 is-centered">June 2021 -> <a href='jun21.html'>here</a></p>
 
         </div>
 
