--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
           </article>
       
 
+          <article class="message is-secondary" style="margin-top: 50px;">
+            <div class="message-body">
+              <h1 class="title">Socials</h1>
+                
+            </div>
+          </article>
+
   </body>
   
   
