--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
           </article>
       
 
-          <article class="message is-secondary" style="margin-top: 50px;">
+          <article class="message is-primary" style="margin-top: 50px;">
             <div class="message-body">
               <h1 class="title">Socials</h1>
                 
