--- a/365/months/nov21.html
+++ b/365/months/nov21.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="https://kit.fontawesome.com/d61b8b67cb.js" crossorigin="anonymous"></script>
 
     <link rel="icon" href="../../favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
