--- a/365/index.html
+++ b/365/index.html
@@ -96,7 +96,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 
 
       <h1 class="title has-text-centered" style="margin-top: 40px;">
-        It's May! So check out <a href="months/jun21.html">the current progress here!</a>
+        It's July! So check out <a href="months/jul21.html">the current progress here!</a>
       </h1>
       
 
